--- a/index-barcode.html
+++ b/index-barcode.html
@@ -16,7 +16,7 @@ content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no
 
 <style>
 *{box-sizing:border-box}
-html,body{margin:0;padding:0;touch-action:manipulation}
+html,body{margin:0;padding:0;touch-action:manipulation}f
 body{
   font-family:Inter,Arial;
   background:linear-gradient(180deg,#eef2ff,#f8fafc);
