--- a/index-barcode.html
+++ b/index-barcode.html
@@ -15,160 +15,292 @@ content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no
 <script src="https://unpkg.com/@ericblade/quagga2/dist/quagga.min.js"></script>
 
 <style>
-*{box-sizing:border-box}
-html,body{margin:0;padding:0;touch-action:manipulation}f
-body{
-  font-family:Inter,Arial;
-  background:linear-gradient(180deg,#eef2ff,#f8fafc);
-  display:flex;
-  justify-content:center;
-  padding:12px;
-}
-.container{
-  background:#fff;
-  border-radius:24px;
-  box-shadow:0 20px 50px rgba(0,0,0,.15);
-  max-width:520px;
-  width:100%;
-  padding:20px;
-  position:relative;
+/* =========================================================
+   RESET + BASE
+========================================================= */
+* {
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 
-/* ===== TOPO ===== */
-.topbar{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  margin-bottom:10px;
-}
-.topbar h1{
-  margin:0;
-  font-size:18px;
-  font-weight:800;
-}
-.btn-logout{
-  background:#fee2e2;
-  color:#991b1b;
-  border:none;
-  padding:6px 12px;
-  border-radius:999px;
-  font-weight:800;
-  font-size:12px;
-  cursor:pointer;
+html, body {
+  margin: 0;
+  padding: 0;
+  touch-action: manipulation;
 }
 
-/* ===== FORM ===== */
-label{font-weight:700;margin-top:14px;display:block}
-input,select,textarea{
-  width:100%;
-  padding:14px;
-  margin-top:6px;
-  border:1px solid #cbd5e1;
-  border-radius:14px;
-  font-size:15px;
-}
-input[readonly]{background:#f1f5f9}
-textarea{min-height:80px;resize:none}
-
-button{
-  width:100%;
-  padding:14px;
-  margin-top:12px;
-  border:none;
-  border-radius:16px;
-  font-weight:800;
-  font-size:15px;
-  cursor:pointer;
-  position:relative;
-}
-.btn-primary{background:#2563eb;color:#fff}
-.btn-muted{background:#e5e7eb;color:#0f172a}
-
-/* overlay botão */
-button.loading{pointer-events:none}
-button.loading::after{
-  content:"Enviando…";
-  position:absolute;inset:0;
-  background:rgba(0,0,0,.35);
-  color:#fff;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  border-radius:16px;
+body {
+  font-family: 'Inter', Arial, sans-serif;
+  background: linear-gradient(180deg, #eef2ff 0%, #f8fafc 100%);
+  display: flex;
+  justify-content: center;
+  padding: 14px;
+  color: #0f172a;
 }
 
-/* ===== CAMERA ===== */
-#camera{
-  display:none;
-  width:100%;
-  height:260px;
-  background:#000;
-  border-radius:18px;
-  margin-top:12px;
-  overflow:hidden;
-}
-#camera video{width:100%;height:100%;object-fit:cover}
-
-#codigoLido{
-  margin-top:8px;
-  text-align:center;
-  font-weight:800;
-  font-size:14px;
-  color:#2563eb;
+/* =========================================================
+   CONTAINER PRINCIPAL
+========================================================= */
+.container {
+  background: #ffffff;
+  border-radius: 24px;
+  box-shadow:
+    0 10px 25px rgba(0,0,0,0.08),
+    0 30px 60px rgba(0,0,0,0.08);
+  max-width: 520px;
+  width: 100%;
+  padding: 20px 18px 22px;
+  position: relative;
 }
 
-/* ===== BADGE ===== */
-.badge{
-  display:inline-block;
-  background:#e0f2fe;
-  color:#0369a1;
-  padding:8px 16px;
-  border-radius:999px;
-  font-weight:800;
-  margin-top:10px;
-  font-size:13px;
+/* =========================================================
+   TOPO / HEADER
+========================================================= */
+.topbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 12px;
 }
 
-/* ===== HISTÓRICO ===== */
-table{
-  width:100%;
-  border-collapse:collapse;
-  margin-top:16px;
-  font-size:13px;
-}
-th,td{
-  border:1px solid #e5e7eb;
-  padding:8px;
-  text-align:center;
-}
-th{background:#f1f5f9}
-.btn-delete{
-  background:#fee2e2;
-  color:#991b1b;
-  border:none;
-  border-radius:10px;
-  padding:6px 10px;
-  font-weight:800;
+.topbar h1 {
+  margin: 0;
+  font-size: 18px;
+  font-weight: 800;
+  letter-spacing: -0.3px;
 }
 
-.hidden{display:none}
-.btn-logout{
-  width:auto;              /* 🔥 ISSO resolve */
-  padding:6px 12px;        /* diminui altura */
-  margin:0;                /* remove espaçamento extra */
-  font-size:12px;
-  border-radius:999px;
-  background:#fee2e2;
-  color:#991b1b;
+/* BOTÃO LOGOUT */
+.btn-logout {
+  width: auto;
+  padding: 6px 14px;
+  font-size: 12px;
+  font-weight: 800;
+  border-radius: 999px;
+  border: none;
+  background: #fee2e2;
+  color: #991b1b;
+  cursor: pointer;
+  transition: all .2s ease;
 }
-.item{
-  background:#f1f5f9;
-  padding:12px;
-  border-radius:12px;
-  margin-top:6px;
-  cursor:pointer;
+
+.btn-logout:hover {
+  background: #fecaca;
 }
-.item:hover{background:#e2e8f0}
+
+/* =========================================================
+   FORMULÁRIOS
+========================================================= */
+label {
+  display: block;
+  margin-top: 14px;
+  margin-bottom: 4px;
+  font-size: 13px;
+  font-weight: 700;
+  color: #1e293b;
+}
+
+input,
+select,
+textarea {
+  width: 100%;
+  padding: 14px;
+  border-radius: 14px;
+  border: 1px solid #cbd5e1;
+  font-size: 15px;
+  font-family: inherit;
+  outline: none;
+  background: #ffffff;
+  transition: all .15s ease;
+}
+
+input:focus,
+select:focus,
+textarea:focus {
+  border-color: #2563eb;
+  box-shadow: 0 0 0 3px rgba(37,99,235,0.15);
+}
+
+input[readonly] {
+  background: #f1f5f9;
+  color: #334155;
+}
+
+textarea {
+  min-height: 90px;
+  resize: none;
+}
+
+/* =========================================================
+   BOTÕES
+========================================================= */
+button {
+  width: 100%;
+  padding: 14px;
+  margin-top: 12px;
+  border-radius: 16px;
+  border: none;
+  font-size: 15px;
+  font-weight: 800;
+  cursor: pointer;
+  position: relative;
+  transition: all .2s ease;
+}
+
+button:active {
+  transform: scale(0.98);
+}
+
+/* PRIMÁRIO */
+.btn-primary {
+  background: linear-gradient(180deg, #2563eb, #1e40af);
+  color: #ffffff;
+}
+
+.btn-primary:hover {
+  filter: brightness(1.05);
+}
+
+/* MUTED */
+.btn-muted {
+  background: #e5e7eb;
+  color: #0f172a;
+}
+
+.btn-muted:hover {
+  background: #d1d5db;
+}
+
+/* LOADING OVERLAY */
+button.loading {
+  pointer-events: none;
+}
+
+button.loading::after {
+  content: "Enviando…";
+  position: absolute;
+  inset: 0;
+  background: rgba(15, 23, 42, 0.55);
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px;
+  font-weight: 800;
+}
+
+/* =========================================================
+   CAMERA / LEITOR
+========================================================= */
+#camera {
+  display: none;
+  width: 100%;
+  height: 260px;
+  margin-top: 14px;
+  border-radius: 18px;
+  overflow: hidden;
+  background: #000;
+}
+
+#camera video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#codigoLido {
+  margin-top: 8px;
+  text-align: center;
+  font-size: 13px;
+  font-weight: 800;
+  color: #2563eb;
+}
+
+/* =========================================================
+   BADGE / UNIDADE
+========================================================= */
+.badge {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 8px 16px;
+  font-size: 13px;
+  font-weight: 800;
+  border-radius: 999px;
+  background: #e0f2fe;
+  color: #0369a1;
+}
+
+/* =========================================================
+   BUSCA POR NOME (LISTA)
+========================================================= */
+#listaProdutos {
+  margin-top: 6px;
+}
+
+.item {
+  background: #f1f5f9;
+  border-radius: 12px;
+  padding: 12px;
+  margin-top: 6px;
+  font-size: 14px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all .15s ease;
+}
+
+.item:hover {
+  background: #e2e8f0;
+}
+
+/* =========================================================
+   HISTÓRICO
+========================================================= */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 16px;
+  font-size: 13px;
+  border-radius: 14px;
+  overflow: hidden;
+}
+
+th, td {
+  border: 1px solid #e5e7eb;
+  padding: 8px;
+  text-align: center;
+}
+
+th {
+  background: #f1f5f9;
+  font-weight: 800;
+}
+
+tbody tr:nth-child(even) {
+  background: #f8fafc;
+}
+
+/* BOTÃO EXCLUIR */
+.btn-delete {
+  background: #fee2e2;
+  color: #991b1b;
+  border: none;
+  border-radius: 10px;
+  padding: 6px 10px;
+  font-size: 12px;
+  font-weight: 800;
+  cursor: pointer;
+}
+
+.btn-delete:hover {
+  background: #fecaca;
+}
+
+/* =========================================================
+   UTILIDADES
+========================================================= */
+.hidden {
+  display: none !important;
+}
 
 </style>
 </head>
