--- a/index-barcode.html
+++ b/index-barcode.html
@@ -407,13 +407,52 @@ const modoBuscaEl = document.getElementById("modoBusca");
 const buscaNomeEl = document.getElementById("buscaNome");
 const buscaIdEl = document.getElementById("buscaId");
 
-modoBuscaEl.onchange = () => {
+const barcodeInput = document.getElementById("barcode");
+const btnManual = document.getElementById("btnManual");
+const btnOpenCamera = document.getElementById("btnOpenCamera");
+const btnCloseCamera = document.getElementById("btnCloseCamera");
+
+function aplicarModoBusca() {
+  const modo = modoBuscaEl.value;
+
+  // Esconde tudo
+  barcodeInput.classList.add("hidden");
   buscaNomeEl.classList.add("hidden");
   buscaIdEl.classList.add("hidden");
+  btnManual.classList.add("hidden");
+  btnOpenCamera.classList.add("hidden");
+  btnCloseCamera.classList.add("hidden");
+  camera.classList.add("hidden");
+  codigoLido.textContent = "";
 
-  if (modoBuscaEl.value === "nome") buscaNomeEl.classList.remove("hidden");
-  if (modoBuscaEl.value === "id") buscaIdEl.classList.remove("hidden");
-};
+  // Fecha câmera se estiver aberta
+  try { Quagga.stop(); } catch (e) {}
+
+  // === MODO CÓDIGO DE BARRAS ===
+  if (modo === "barcode") {
+    barcodeInput.classList.remove("hidden");
+    btnManual.classList.remove("hidden");
+    btnOpenCamera.classList.remove("hidden");
+  }
+
+  // === MODO ID ===
+  if (modo === "id") {
+    buscaIdEl.classList.remove("hidden");
+    btnManual.classList.remove("hidden");
+  }
+
+  // === MODO NOME ===
+  if (modo === "nome") {
+    buscaNomeEl.classList.remove("hidden");
+  }
+}
+
+// Eventos
+modoBuscaEl.addEventListener("change", aplicarModoBusca);
+
+// Aplica ao iniciar a tela
+aplicarModoBusca();
+
 
 /* ===== SETOR PERSISTENTE ===== */
 const setorEl=document.getElementById("setor");
@@ -487,7 +526,17 @@ function fecharCamera(){
  btnOpenCamera.classList.remove("hidden");
  btnCloseCamera.classList.add("hidden");
 }
-btnManual.onclick=()=>barcode.value&&buscarProduto(normalizar(barcode.value));
+btnManual.onclick = () => {
+  const modo = modoBuscaEl.value;
+
+  if (modo === "barcode" && barcode.value) {
+    buscarProduto(normalizar(barcode.value));
+  }
+
+  if (modo === "id" && buscaProdutoId.value) {
+    buscaProdutoId.dispatchEvent(new Event("change"));
+  }
+};
 
 /* ===== ENVIAR ===== */
 btnEnviar.onclick=async()=>{
