--- a/index-barcode.html
+++ b/index-barcode.html
@@ -332,7 +332,7 @@ tbody tr:nth-child(even) {
   <option>Bar</option>
 </select>
 
-<label>Código de Barras</label>
+<label></label>
 <input id="barcode" placeholder="Digite ou escaneie">
 <label>Modo de busca</label>
 <select id="modoBusca">
